<resources>
    <string name="app_name">BikeSafetyQuizApp</string>
    <string name="main_title">Bike Safety Quiz</string>
    <string name="name_holder">Type your name</string>
    <string name="start_button">START</string>
    <string name="submit_button">SUBMIT</string>
    <string name="choose_menu">Choose Your Activity</string>
    <string name="user_name">User Name</string>
    <string name="quiz_icon_text">Quiz</string>
    <string name="view_result_icon_text">View Result</string>
    <string name="ok_button">OK</string>
    <string name="greatjob">Great Job!</string>
    <string name="solve_again_button">Solve Again</string>
    <string name="go_home_button">Go to the Dashboard</string>
    <string name="go_start_button">Go Home</string>
    <string name="score_board">Score Board</string>
    <string name="correct_answer_word">Good job!</string>
    <string name="correct_answer">Correct answer</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="wrong_answer_word">Oops!</string>
    <string name="reference_link">Reference: http://bikeleague.org/</string>
    <string name="initial_score">0/5</string>
    <string name="not_applicable">N/A</string>
    <string name="logv_message_quiz">Quiz icon is clicked.</string>
    <string name="logv_message_result">View Result icon is clicked.</string>
    <string name="logv_message_username">(receiveDataFromMainActivity) user name: </string>
</resources>
