<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:background="@drawable/main_background"
    android:scaleType="centerCrop"
    android:fillViewport="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/main_title"
            android:textColor="#F4F8F5  "
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/mainView"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/bikesafetymain" />

        <EditText
            android:id="@+id/enterName"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:hint="@string/name_holder"
            android:inputType="text"
            android:textColor="@android:color/white">
        </EditText>

        <Button
            android:id="@+id/startButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:onClick="startButton"
            android:text="@string/start_button"
            android:textColor="@color/bgGreen"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/referenceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif"
            android:text="@string/reference_link"
            android:linksClickable="true"
            android:textColor="#F4F8F5"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>