<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background"
    android:fillViewport="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".DashboardActivity">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/userIconView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:src="@drawable/user_icon" />

            <TextView
                android:id="@+id/userNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/user_name"
                android:textColor="@color/userNameColor"
                android:textSize="25sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/dashboardTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif"
            android:text="@string/choose_menu"
            android:textColor="#F4F8F5  "
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/quizIconView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/quiz_icon" />

            <ImageView
                android:id="@+id/viewResultView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/view_result_icon" />

        </LinearLayout>

        <Button
            android:id="@+id/goHomeButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:onClick="goHome"
            android:text="@string/go_start_button"
            android:textColor="@color/bgGreen"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>